# crypto-prices-predictor-ml-system

./: .gitignore  README.md
docker-compose/: Makefile  redpanda.yml
services/bitcoin_predictor/: pyproject.toml
services/kafka_to_feature_store/: pyproject.toml
services/kafka_to_feature_store/src/: hopswork_api.py  main.py
services/trade_predictor/src/: main.py
services/trade_producer/: Dockerfile  Makefile  pyproject.toml
services/trade_producer/src/: config.py  kraken_api.py  main.py
services/trade_to_ohlc/: pyproject.toml
services/trade_to_ohlc/src/: config.py  main.py
