[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["yohans-ab <yohans.brhane21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
quixstreams = "^2.6.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.3.4"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
